--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 0.1.1 / 2008-06-22
+
+* Fixed documentation
+
+* Added String#to_big_money and Numeric#to_big_money
+
 === 0.1.0 / 2008-06-21
 
 * Initial beta release
